<resources>
    <string name="app_name">Kaniyadath</string>

    //Button
    <string name="Login_button">Login</string>
    <string name="Register_button">Register</string>
    <string name="Forgot_button">Forgot</string>
    <string name="add">Add</string>
    <string name="Sign_up_button">Signup</string>
    <string name="change">Change</string>
    <string name="next">Next</string>
    <string name="pay">Pay</string>

    //EditText
    <string name="Email_enter">Email (abc@gmail.com)</string>
    <string name="Email">Email</string>
    <string name="Pass_enter">Password</string>
    <string name="Pass_old_enter">Enter Old Password</string>
    <string name="Pass_new_enter">Enter New Password</string>
    <string name="Conf_Pass_enter">Confirm Password</string>
    <string name="Name_enter">Enter Name</string>
    <string name="Mobile_enter">Enter Mobile Number</string>
    <string name="new_salary">Enter New Salary</string>
    <string name="add_type_name">Enter Incentive Type Name</string>
    <string name="add_bill_no_text">Enter Bill Invoice Number</string>

    //TextView
    <string name="swipe">Swipe</string>
    <string name="datePicker">Pick a Day</string>
    <string name="general">General</string>
    <string name="change_salary">Edit Salary</string>
    <string name="add_new_type">Add New Incentive Type</string>
    <string name="change_inst_per">Change Incentive Percentage</string>
    <string name="add_type_unit">Select Incentive Type</string>
    <string name="logout">Logout</string>
    <string name="search">Search Employee Here</string>
    <string name="salary">Fixed Salary</string>
    <string name="total_incentive">Total Incentive</string>
    <string name="total">Total</string>
    <string name="grand_total">Grand Total</string>
    <string name="balance"> Previous Balance</string>
    <string name="payed">Paid</string>
    <string name="pass_reset">Change Password</string>
    <string name="name_reset">Change Profile Name</string>
    <string name="about">About</string>

    //Error
    <string name="Email_error">Please Check Email Address</string>
    <string name="user_exist">Employee Already Exists. Please try with another Email</string>

    //Heading
    <string name="home">Home</string>
    <string name="employee">Employees</string>
    <string name="settings">Settings</string>
    <string name="history">History</string>
    <string name="today">Today</string>
    <string name="month">Month</string>
    <string name="incentive">Incentive</string>
    <string name="edit_type">Edit Incentive Type</string>
    <string name="attendance">Attendance</string>
    <string name="ledger">Pay Roll</string>
    <string name="accounts">Accounts</string>
    <string name="privacy">Privacy Policy</string>
    <string name="referral_code">Referral Code</string>


</resources>
