<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".AdminSettingFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <!--Starting Toolbar-->
            <RelativeLayout
                android:id="@+id/settings_toolbar"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="@drawable/toolbar_design_primary"
                android:padding="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="10dp"
                    android:text="@string/settings"
                    android:textColor="@color/toolbar_text"
                    android:textSize="18dp"
                    android:textStyle="bold" />
            </RelativeLayout>
            <!--Ending Toolbar-->

            <RelativeLayout
                android:id="@+id/setting_incentives"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/settings_toolbar"
                android:padding="5dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp">

                <TextView
                    android:id="@+id/setting_inst_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/incentive" />

                <RelativeLayout
                    android:id="@+id/setting_add_inst"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:layout_below="@id/setting_inst_text"
                    android:layout_centerHorizontal="true">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/add_new_type"
                        android:padding="5dp"
                        android:textColor="@color/text_color_bg"
                        android:textSize="15dp" />
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/setting_change_inst"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/setting_add_inst"
                    android:padding="5dp"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="5dp">

                    <TextView
                        android:id="@+id/setting_change_inst_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="5dp"
                        android:text="@string/change_inst_per"
                        android:textColor="@color/text_color_bg"
                        android:textSize="15dp" />

                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/setting_add_salary"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:layout_below="@id/setting_change_inst">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/change_salary"
                        android:padding="5dp"
                        android:textColor="@color/text_color_bg"
                        android:textSize="15dp" />
                </RelativeLayout>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/setting_general_layout"
                android:padding="5dp"
                android:layout_below="@id/setting_incentives">

                <TextView
                    android:id="@+id/settings_general_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/general" />

                <RelativeLayout
                    android:id="@+id/setting_referral_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:layout_below="@id/settings_general_text">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/referral_code"
                        android:padding="5dp"
                        android:textColor="@color/text_color_bg"
                        android:textSize="15dp" />
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/setting_change_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:layout_below="@id/setting_referral_layout">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Change Password"
                        android:padding="5dp"
                        android:textColor="@color/text_color_bg"
                        android:textSize="15dp" />
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/setting_logout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:layout_below="@id/setting_change_password">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/logout"
                        android:padding="5dp"
                        android:textColor="@color/text_color_bg"
                        android:textSize="15dp" />
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/admin_setting_privacy"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:layout_below="@id/setting_logout">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/privacy"
                        android:padding="5dp"
                        android:textColor="@color/text_color_bg"
                        android:textSize="15dp" />
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/admin_setting_about"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:layout_below="@id/admin_setting_privacy">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/about"
                        android:padding="5dp"
                        android:textColor="@color/text_color_bg"
                        android:textSize="15dp" />
                </RelativeLayout>
            </RelativeLayout>


        </RelativeLayout>
    </ScrollView>

</RelativeLayout>