<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EmployeeChangePassword">

    <RelativeLayout
        android:id="@+id/employee_change_toolbar"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@drawable/toolbar_design_primary"
        android:padding="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:text="@string/pass_reset"
            android:textColor="@color/toolbar_text"
            android:textSize="18dp"
            android:textStyle="bold" />
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/employee_change_toolbar">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">



            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:padding="10dp">

                <EditText
                    android:id="@+id/employee_change_pass_old_pass"
                    android:layout_width="370dp"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="10dp"
                    android:hint="@string/Pass_old_enter"
                    android:inputType="textPassword"
                    android:padding="10dp"
                    android:textColor="@color/edit_text_color" />

                <EditText
                    android:id="@+id/employee_change_pass_new_pass"
                    android:layout_width="370dp"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/employee_change_pass_old_pass"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="10dp"
                    android:hint="@string/Pass_new_enter"
                    android:inputType="textPassword"
                    android:padding="10dp"
                    android:textColor="@color/edit_text_color" />

                <EditText
                    android:id="@+id/employee_change_pass_confirm"
                    android:layout_width="370dp"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/employee_change_pass_new_pass"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="10dp"
                    android:hint="@string/Conf_Pass_enter"
                    android:inputType="textPassword"
                    android:padding="10dp"
                    android:textColor="@color/edit_text_color" />

                <Button
                    android:id="@+id/employee_change_pass_button"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/employee_change_pass_confirm"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="50dp"
                    android:background="@drawable/button_design"
                    android:text="@string/change"
                    android:textColor="@color/button_text"
                    android:textStyle="bold" />

                <ProgressBar
                    android:id="@+id/employee_change_pass_progress"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/employee_change_pass_button"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="30dp" />

            </RelativeLayout>



        </RelativeLayout>


    </ScrollView>

</RelativeLayout>