<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".EmployeeSettingsFragment">

    <RelativeLayout
        android:id="@+id/employee_settings_toolbar"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@drawable/toolbar_design_primary"
        android:padding="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:text="@string/settings"
            android:textColor="@color/toolbar_text"
            android:textSize="18dp"
            android:textStyle="bold" />
    </RelativeLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/employee_settings_toolbar">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/employee_setting_general_layout"
                android:layout_margin="10dp"
                android:padding="10dp">

                <RelativeLayout
                    android:id="@+id/employee_setting_name_reset"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="5dp"
                    android:layout_marginRight="10dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:padding="5dp"
                        android:text="@string/name_reset"
                        android:textColor="@color/text_color_bg"
                        android:textSize="15dp" />
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/employee_setting_pass_reset"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/employee_setting_name_reset"
                    android:padding="5dp"
                    android:layout_marginRight="10dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:padding="5dp"
                        android:text="@string/pass_reset"
                        android:textColor="@color/text_color_bg"
                        android:textSize="15dp" />
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/employee_setting_logout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/employee_setting_pass_reset"
                    android:padding="5dp"
                    android:layout_marginRight="10dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:padding="5dp"
                        android:text="@string/logout"
                        android:textColor="@color/text_color_bg"
                        android:textSize="15dp" />
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/employee_setting_privacy"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/employee_setting_logout"
                    android:padding="5dp"
                    android:layout_marginRight="10dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:padding="5dp"
                        android:text="@string/privacy"
                        android:textColor="@color/text_color_bg"
                        android:textSize="15dp" />
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/employee_setting_about"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/employee_setting_privacy"
                    android:padding="5dp"
                    android:layout_marginRight="10dp">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:padding="5dp"
                        android:text="@string/about"
                        android:textColor="@color/text_color_bg"
                        android:textSize="15dp" />
                </RelativeLayout>
            </RelativeLayout>


        </RelativeLayout>


    </ScrollView>


</RelativeLayout>