<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context=".MainActivity">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/login_container"
        android:layout_centerInParent="true"
        android:layout_margin="10dp"
        android:padding="16dp">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">


                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:id="@+id/login_logo_layout"
                    android:layout_marginBottom="30dp"
                    android:layout_marginTop="50dp"
                    android:padding="10dp">

                    <ImageView
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:src="@drawable/ic_right_triangle_white_24dp"
                        android:rotation="180"
                        android:layout_centerHorizontal="true"
                        android:id="@+id/logo_left"/>
                    <ImageView
                        android:layout_width="80dp"
                        android:layout_height="80dp"
                        android:src="@drawable/ic_right_triangle_24dp"
                        android:rotation="90"
                        android:layout_marginLeft="20dp"
                        android:id="@+id/logo_right"/>

                    <ImageView
                        android:layout_width="80dp"
                        android:layout_height="25dp"
                        android:id="@+id/splash_text1"
                        android:layout_below="@id/logo_left"
                        android:layout_centerHorizontal="true"
                        android:src="@drawable/kaniyadath_logo_text"/>
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/login_entry_layout"
                    android:layout_below="@id/login_logo_layout"
                    android:layout_margin="10dp"
                    android:padding="5dp">

                    <EditText
                        android:id="@+id/login_email"
                        android:layout_width="370dp"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:hint="@string/Email"
                        android:textColorHint="@color/text_color_accent"
                        android:inputType="textEmailAddress"
                        android:padding="10dp"
                        android:textColor="@color/text_color_primary" />

                    <EditText
                        android:id="@+id/login_password"
                        android:layout_width="370dp"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/login_email"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="10dp"
                        android:textColorHint="@color/text_color_accent"
                        android:hint="@string/Pass_enter"
                        android:inputType="textPassword"
                        android:padding="10dp"
                        android:textColor="@color/text_color_primary" />

                    <Button
                        android:id="@+id/login_button"
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/login_password"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="50dp"
                        android:background="@color/text_color_accent"
                        android:text="@string/Login_button"
                        android:textColor="@color/button_text"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/login_forgot"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/login_button"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="20dp"
                        android:text="@string/Forgot_button"
                        android:textColor="@color/text_color_primary"
                        android:textSize="18dp" />

                    <TextView
                        android:id="@+id/login_register"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/login_forgot"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="20dp"
                        android:text="@string/Register_button"
                        android:textColor="@color/text_color_primary"
                        android:textSize="18dp" />

                    <ProgressBar
                        android:id="@+id/login_progress"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/login_register"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="20dp" />
                </RelativeLayout>



            </RelativeLayout>

        </ScrollView>

    </RelativeLayout>


</RelativeLayout>